--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Lesson 11</title>
 </head>
 <body>
-    <script src="/lesson-11.f91d1a4d.js"></script>
+    <script src="./lesson-11.f91d1a4d.js"></script>
 </body>
 </html>
